feat: update creator platform with new sso token api as well as the ability to query a set of post based on category
