# core-library/pkg/generated/social_service/v2/apidocs.swagger.json
@@ -777,7 +777,7 @@
         ]
       }
     },
-    "/api/v1/user/{userId}/canny/account-type/{accountType}": {
+    "/api/v1/user/{userId}/canny": {
       "get": {
         "summary": "Retrieves user sso token for canny",
         "description": "Fetches a user sso token for canny",
@@ -820,18 +820,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "accountType",
-            "description": "Indicates the profile type to be queried.\nFor example: \"username:testuser\"",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "enum": [
-              "ACCOUNT_TYPE_UNSPECIFIED",
-              "ACCOUNT_TYPE_USER",
-              "ACCOUNT_TYPE_COMMUNITY"
-            ]
           }
         ],
         "tags": [
