# core-library/pkg/generated/social_service/v2/request_response.pb.validate.go
@@ -20650,8 +20650,6 @@ func (m *GetCannyUserSSOTokenRequest) validate(all bool) error {
 		errors = append(errors, err)
 	}
 
-	// no validation rules for AccountType
-
 	if len(errors) > 0 {
 		return GetCannyUserSSOTokenRequestMultiError(errors)
 	}
